Version Tablet tjrs avec BUG photo

--- a/css/style.css
+++ b/css/style.css
@@ -227,5 +227,12 @@ footer {
     #grid {
         display: var(--dsp-grid);
         grid-template-columns: 1fr 1fr;
+        .bug{
+            article figure{
+               img{
+                height: 100%;
+               } 
+            }
+        }
     }
 }
